# rust-crud-api

./: Cargo.toml  README.md  db.sql
src/: main.rs
src/db/: mod.rs  todo.rs
src/handlers/: mod.rs  rejection.rs  todo.rs
src/models/: db.rs  error.rs  mod.rs  todo.rs
src/routes/: mod.rs
